login / register funcional

--- a/cocteleria/views/index.hbs
+++ b/cocteleria/views/index.hbs
@@ -1,6 +1,6 @@
 <div id="login">
 
-    <form action="/users/login" method="POST">
+    <form action="/auth/" method="POST">
         {{#if missatgeError}}
         <div class="alert alert-danger" role="alert">
             {{missatgeError}}
