--- a/cocteleria/views/auth/signup.hbs
+++ b/cocteleria/views/auth/signup.hbs
@@ -1,12 +1,12 @@
 <div id="signin">
-  <form action="/signin" method="POST">
+  <form action="/auth/signup" method="POST">
     {{#if missatgeError}}
     <div class="alert alert-danger" role="alert">
       {{missatgeError}}
     </div>
     {{/if}}
     <div class="form-floating mb-3">
-      <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com" name="username">
+      <input type="text" class="form-control" id="floatingInput" placeholder="Usuario" name="username">
       <label for="floatingInput">Usuario</label>
     </div>
     <div class="form-floating mb-3">
