--- a/cocteleria/views/crear.hbs
+++ b/cocteleria/views/crear.hbs
@@ -44,9 +44,9 @@
 </nav>
 
 <div id="signin">
-    <form action="/signin" method="POST">
+    <form action="/crear" method="POST">
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingInput" name="name">
+            <input type="text" class="form-control" id="floatingInput" placeholder="Nombre del cocktail" name="name">
             <label for="floatingInput">Nombre del cocktail</label>
         </div>
         <div class="form-floating mb-3">
