--- a/cocteleria/views/index.hbs
+++ b/cocteleria/views/index.hbs
@@ -1,9 +1,9 @@
 <div id="login">
 
     <form action="/auth/" method="POST">
-        {{#if missatgeError}}
+        {{#if errorMessage}}
         <div class="alert alert-danger" role="alert">
-            {{missatgeError}}
+            {{errorMessage}}
         </div>
         {{/if}}
         <div class="form-floating mb-3">
