CRUD començat i mig funcional

--- a/cocteleria/views/crear.hbs
+++ b/cocteleria/views/crear.hbs
@@ -50,11 +50,11 @@
             <label for="floatingInput">Nombre del cocktail</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingPassword" placeholder="Password" name="alcohol">
+            <input type="text" class="form-control" id="floatingPassword" placeholder="Alcohol" name="alcohol">
             <label for="floatingPassword">Elige tu alcohol</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password"
+            <input type="text" class="form-control" id="floatingPassword" placeholder="Ingredientes"
                 name="ingredientes">
             <label for="floatingPassword"> Ingredientes</label>
         </div>
@@ -66,7 +66,7 @@
             </label>
         </div>
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingInput" name="origen">
+            <input type="text" class="form-control" id="floatingInput" name="pais">
             <label for="floatingInput">Origen</label>
         </div>
         <div class="form-group">
