--- a/cocteleria/views/principal.hbs
+++ b/cocteleria/views/principal.hbs
@@ -44,3 +44,9 @@
 </nav>
 
 <h1>principal</h1>
+{{#each coctel}}
+    <h4>Nombre: {{name}}</h4>
+    <p><strong>Alcohol: </strong>{{alcohol}}</p>
+    <p><strong>Ingredientes: </strong>{{ingredientes}}</p>
+    {{!-- ... Toda la info de cada Coctel --}}
+{{/each}}
