--- a/cocteleria/views/crear.hbs
+++ b/cocteleria/views/crear.hbs
@@ -44,7 +44,7 @@
 </nav>
 
 <div id="signin">
-    <form action="/crear" method="POST">
+    <form action="/crear" method="POST" enctype="multipart/form-data">
         <div class="form-floating mb-3">
             <input type="text" class="form-control" id="floatingInput" placeholder="Nombre del cocktail" name="name">
             <label for="floatingInput">Nombre del cocktail</label>
@@ -62,11 +62,11 @@
 
         <div class="form-group">
             <label>Sube tu imagen:
-                <input type="file" name="imageUrl" class="form-control-file" />
+                <input type="file" name="coctel-cover-image" class="form-control-file" />
             </label>
         </div>
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingInput" name="pais">
+            <input type="text" class="form-control" id="floatingInput" name="origen">
             <label for="floatingInput">Origen</label>
         </div>
         <div class="form-group">
