--- a/cocteleria/views/principal.hbs
+++ b/cocteleria/views/principal.hbs
@@ -44,9 +44,25 @@
 </nav>
 
 <h1>principal</h1>
+<div class="container text-center">
+    <div class="row">
+
 {{#each coctel}}
-    <h4>Nombre: {{name}}</h4>
-    <p><strong>Alcohol: </strong>{{alcohol}}</p>
-    <p><strong>Ingredientes: </strong>{{ingredientes}}</p>
+        <div class="col-3 m-1" style="background-color: rgba(223, 223, 222, 0.5)">
+            <img src="{{imageUrl}}" class="card-img-top" alt="Imagen del coctel">
+
+            <div class="card-body">
+
+    <h5 class="card-title"> {{name}}</h5>
+    <a href="#" class="btn btn-primary">Más información</a>
+    </div>
+</div>
+    {{!-- <p><strong>Alcohol: </strong>{{alcohol}}</p>
+    <p><strong>Ingredientes: </strong>{{ingredientes}}</p> --}}
     {{!-- ... Toda la info de cada Coctel --}}
 {{/each}}
+     </div>
+</div> 
+
+
+
