--- a/cocteleria/views/index.hbs
+++ b/cocteleria/views/index.hbs
@@ -7,11 +7,11 @@
         </div>
         {{/if}}
         <div class="form-floating mb-3">
-            <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com" name="username">
+            <input type="text" class="form-control" id="floatingInput" autocomplete="off" placeholder=" " name="username">
             <label for="floatingInput">Usuario</label>
         </div>
         <div class="form-floating mb-3">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
+            <input type="password" class="form-control" id="floatingPassword" placeholder=" " name="password">
             <label for="floatingPassword">Contraseña</label>
         </div>
         <button type="submit" class="btn btn-primary">Entrar</button>
