--- a/cocteleria/views/principal.hbs
+++ b/cocteleria/views/principal.hbs
@@ -50,3 +50,4 @@
     <p><strong>Ingredientes: </strong>{{ingredientes}}</p>
     {{!-- ... Toda la info de cada Coctel --}}
 {{/each}}
+<h3>{{usuari.username}}</h3>
