--- a/cocteleria/views/profile.hbs
+++ b/cocteleria/views/profile.hbs
@@ -39,6 +39,11 @@
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
+            <ul class="nav-item">
+                <a class="nav-link" href="/logout">
+                    Log-Out
+                </a>
+            </ul>
         </div>
     </div>
 </nav>
