--- a/cocteleria/views/principal.hbs
+++ b/cocteleria/views/principal.hbs
@@ -48,7 +48,12 @@
     </div>
 </nav>
 
+{{#if palab}}
+<h2>Aqui puedes ver todos los cócteles que contengan {{palab.alcohol}}</h2>
+{{else}}
 <h2>Aqui puedes ver todos los cócteles</h2>
+{{/if}}
+
 <div class="container text-center">
     <div class="row">
 
