--- a/cocteleria/views/auth/signup.hbs
+++ b/cocteleria/views/auth/signup.hbs
@@ -19,4 +19,7 @@
     </div>
     <button type="submit" class="btn btn-primary">Registrarse</button>
   </form>
-</div>
+</div> 
+{{!-- fotos usuari --}}
+
+
