--- a/cocteleria/public/stylesheets/style.css
+++ b/cocteleria/public/stylesheets/style.css
@@ -1,12 +1,9 @@
 body {
-  padding: 50px;
+  
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00b7ff;
+#navbar{
+  width: 100vw;
 }
 
-h1 {
-  color: 15px;
-}
