--- a/cocteleria/views/profile.hbs
+++ b/cocteleria/views/profile.hbs
@@ -1,75 +1,33 @@
-<nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">{{user.username}}</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/principal">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-house-door-fill" viewBox="0 0 16 16">
-                            <path
-                                d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z" />
-                        </svg>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/profile">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-person-fill" viewBox="0 0 16 16">
-                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
-                        </svg>
-                    </a>
-                </li>
+{{> header usuario}}
 
-                <li class="nav-item">
-                    <a class="nav-link " href="/crear">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
-                            <path
-                                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
-                        </svg>
-                    </a>
-                </li>
-            </ul>
-            <ul class="nav-item">
-                <a class="nav-link" href="/logout">
-                    Log-Out
-                </a>
-            </ul>
+<div class="card mb-3" style="width: 100vw; height: 30vh">
+    <div class="row g-0">
+        <div class="col-md-4">
+            <img src="{{user.fotoPerfil}}" class="img-fluid rounded-start" alt="Avatar usuario" name="perfil-cover-image" style="height: 30vh" >
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h3 class="card-title">{{user.username}}</h3>
+                <p class="card-text">{{user.descripcion}}</p>
+               
+            </div>
         </div>
     </div>
-</nav>
-<h1>profile</h1>
-<h2>Cocteles de {{user.username}}</h2>
-
- <form action="/profile" method="POST" enctype="multipart/form-data">
-  <div class="form-group">
-            <label>Sube tu imagen:
-                <input type="file" name="perfil-cover-image" class="form-control-file" />
-            </label>
-
-    </div>   
-    <button type="submit" class="btn btn-primary">Sube tu creación</button>
-</form>
-<img src="{{user.fotoPerfil}}" alt="que te den" class="rounded-circle" name="perfil-cover-image">
-
-{{#each coctelUser}}
-        <div class="col-3 m-1" style="background-color: rgba(223, 223, 222, 0.5)">
-            <img src="{{imageUrl}}" class="card-img-top" alt="Imagen del cóctel">
-
-            <div class="card-body">
-
-    <h5 class="card-title"> {{name}}</h5>
-    <a href="informacion/{{_id}}" class="btn btn-primary">Más información</a>
-    </div>
 </div>
-    {{!-- <p><strong>Alcohol: </strong>{{alcohol}}</p>
-    <p><strong>Ingredientes: </strong>{{ingredientes}}</p> --}}
-    {{!-- ... Toda la info de cada Coctel --}}
+
+<div class="container text-center">
+    <div class="row">
+{{#each coctelUser}}
+    <div class="col-3 m-1" style="background-color: rgba(223, 223, 222, 0.5)">
+        <img src="{{imageUrl}}" class="card-img-top" alt="Imagen del cóctel">
+        <div class="card-body">
+            <h5 class="card-title"> {{name}}</h5>
+            <a href="informacion/{{_id}}" class="btn btn-primary">Más información</a>
+        </div>
+    </div>
 {{/each}}
+
+    </div> 
+</div>
 
 
