--- a/cocteleria/views/partials/header.hbs
+++ b/cocteleria/views/partials/header.hbs
@@ -45,7 +45,7 @@
             </ul>
     
             <ul class="nav-item">
-                <a class="nav-link" href="./auth/logout">
+                <a class="nav-link" href="/logout">
                     Log-Out
                 </a>
             </ul>
