--- a/cocteleria/views/editarPerfil.hbs
+++ b/cocteleria/views/editarPerfil.hbs
@@ -7,13 +7,13 @@
 <form action="/editarPerfil" method="POST" enctype="multipart/form-data">
 
     <div class="form-floating mb-3">
-        <input type="text" class="form-control" id="floatingInput" placeholder=" " name="username"
-            autocomplete="off">
+        <input type="text" class="form-control" id="floatingInput" name="username"
+            autocomplete="off" value="{{usuario.username}}">
         <label for="floatingInput">Editar nombre de usuario</label>
     </div>
     <div class="form-group">
         <label>Descripción
-            <textarea name="descripcion" autocomplete="off" cols="30" rows="4" class="form-control"></textarea>
+            <textarea name="descripcion" autocomplete="off" cols="30" rows="4" class="form-control">{{usuario.descripcion}}</textarea>
         </label>
     </div>
    
@@ -23,7 +23,5 @@
         </label>
     </div>
     <button type="submit" class="btn btn-primary">Editar perfil</button>
-    
-
 </form>
 
