totes les funcionalitats funcionals

--- a/cocteleria/views/auth/signup.hbs
+++ b/cocteleria/views/auth/signup.hbs
@@ -17,6 +17,10 @@
       <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="passwordRepeat">
       <label for="floatingPassword">Repetir contraseña</label>
     </div>
+    <div class="form-floating mb-3">
+      <input type="text" class="form-control" id="floatingPassword" placeholder=" " name="isPremium">
+      <label for="floatingPassword">¿Tienes código premium? ¡Ponlo aquí!</label>
+    </div>
     <button type="submit" class="btn btn-primary">Registrarse</button>
   </form>
 </div> 
