--- a/cocteleria/views/editCoctel.hbs
+++ b/cocteleria/views/editCoctel.hbs
@@ -44,4 +44,7 @@
         
         <button type="submit" class="btn btn-primary">Editar cambios</button>
     </form>
+    <form>
+        <input type="button" class="btn btn-light text-black h6 mt-3" value="Volver atrás" onclick="history.back()">
+    </form>
 </div>
