--- a/cocteleria/views/editarPerfil.hbs
+++ b/cocteleria/views/editarPerfil.hbs
@@ -24,4 +24,7 @@
     </div>
     <button type="submit" class="btn btn-primary">Editar perfil</button>
 </form>
+<form>
+    <input type="button" class="btn btn-light text-black h6 mt-3" value="Volver atrás" onclick="history.back()">
+</form>
 
