--- a/cocteleria/views/profile.hbs
+++ b/cocteleria/views/profile.hbs
@@ -24,14 +24,13 @@
                 <h5 class="card-title"> {{name}}</h5>
 
                 <a href="/informacion/{{_id}}" class="btn btn-primary">Más información</a>
-
-
-
-                
             </div>
         </div>
         {{/each}}
     </div>
+    <form>
+        <input type="button" class="btn btn-light text-black h6 mt-3" value="Volver atrás" onclick="history.back()">
+    </form>
 </div>
 
 
