--- a/cocteleria/views/crear.hbs
+++ b/cocteleria/views/crear.hbs
@@ -2,7 +2,7 @@
 
 
 
-<div id="signin">
+<div id="crearcoctel">
     <form action="/crear" method="POST" enctype="multipart/form-data">
         <div class="form-floating mb-3">
             <input type="text" class="form-control" id="floatingInput" placeholder="Nombre del cocktail" name="name" autocomplete="off">
