--- a/cocteleria/views/auth/signup.hbs
+++ b/cocteleria/views/auth/signup.hbs
@@ -1,3 +1,6 @@
+<body id="signupbody">
+
+
 <div id="signin">
   <form action="/auth/signup" method="POST">
     {{#if errorMessage}}
@@ -20,6 +23,6 @@
     <button type="submit" class="btn btn-primary">Registrarse</button>
   </form>
 </div> 
-{{!-- fotos usuari --}}
+</body>
 
 
