--- a/cocteleria/views/partials/header.hbs
+++ b/cocteleria/views/partials/header.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light" id="navbar">
+<nav class="navbar navbar-expand-lg" id="navbar">
     <div class="container-fluid">
         <p class="navbar-brand" href="#">Cocktail</p>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -42,6 +42,7 @@
                         </svg>
                     </a>
                 </li>
+                
             </ul>
     
             <ul class="nav-item">
