--- a/cocteleria/views/partials/header.hbs
+++ b/cocteleria/views/partials/header.hbs
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg" id="navbar">
-    <div class="container-fluid">
-        <p class="navbar-brand" href="#">Cocktail</p>
+    <div class="container-fluid">  
+        <div class="collapse navbar-collapse align-middle" id="navbarSupportedContent">
+            <p class="navbar-brand align-middle text-white h1" href="#">Cocktail</p>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 align-middle">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/principal">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -16,7 +16,7 @@
                         </svg>
                     </a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown align-middle">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -24,7 +24,7 @@
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
                         </svg>
                     </a>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu align-middle">
                         <li><a class="dropdown-item" href="/profile/{{_id}}">Ver perfil</a></li>
                         <li>
                             <hr class="dropdown-divider">
