css casi terminada

--- a/cocteleria/views/index.hbs
+++ b/cocteleria/views/index.hbs
@@ -3,8 +3,11 @@
 
 <div id="login">
     <div id="indexizq">
-        <h1>Cocktail</h1>
+        <h2>Cocktails</h2>
+        <img src="/images/cocktails.png" alt="logo">
+
     </div>
+
     <div id="indexder">
 
     <form action="/auth/" method="POST" id="formindex">
