--- a/cocteleria/public/stylesheets/style.css
+++ b/cocteleria/public/stylesheets/style.css
@@ -16,6 +16,8 @@ body {
       margin-right: 10%;
 }
 
+
+
 #login{
       display: flex;
       justify-content: space-between;
@@ -67,20 +69,23 @@ text-align: center;
 
 #indexizq{
   display: flex;
+  justify-content: center;
   height: 80vh;
     width: 50vw;
     
+    
 }
 #indexizq h1{
-  -webkit-transform: rotate(-25deg);
-  transform: rotate(-25deg);
+  /* -webkit-transform: rotate(-25deg);
+  transform: rotate(-25deg); */
   margin: auto;
+  
   font-family: 'Qwitcher Grypen', cursive;
-  font-size: 130px;
+  font-size:100px;
   text-align:center;
-  border: 2px solid rgba(238, 30, 242, 0.78);
-  width: 35vw;
-  height: 63vh;
+  border: 2px solid rgba(222, 121, 26, 0.92),;
+  width: 350px;
+  height: 350px;
   border-radius: 100%;
   color: fff;
   font-weight: 10px;
@@ -88,8 +93,28 @@ text-align: center;
 
         animation: neon .1s ease-in-out infinite alternate;
 }
-
 @keyframes neon {
+  from {
+    box-shadow:
+      0 0 4px rgba(202, 228, 225, 0.92),
+      0 0 10px rgba(202, 228, 225, 0.34),
+      0 0 10px rgba(229, 255, 34, 0.52),
+      0 0 7px rgba(222, 121, 26, 0.92),
+      0 0 13px rgba(242, 150, 30, 0.78),
+      0 0 40px rgba(255, 162, 62, 0.92);
+  }
+
+  to {
+    box-shadow:
+      0 0 4px rgba(202, 228, 225, 0.98),
+      0 0 15px rgba(202, 228, 225, 0.42),
+      0 0 6px rgba(242,118,30, 0.58),
+      0 0 9px rgba(222, 121,26, 0.84),
+      0 0 15px rgba(242,150, 30, 0.88),
+      0 0 30px rgba(255, 162,62, 1);
+  }
+}
+/* @keyframes neon {
   from {
     box-shadow:
       0 0 4px rgba(202, 228, 225, 0.92),
@@ -109,10 +134,54 @@ text-align: center;
       0 0 15px rgba(238, 30, 242, 0.88),
       0 0 20px rgba(255, 62, 239, 1);
   }
+} */
+
+#indexizq img{
+  position:absolute;
+width: 400px;
+  margin-top: 100px;
+  /* margin-left: 100px; */
+  
+}
+
+#indexizq h2{
+  z-index: 1;
+  position: absolute;
+  font-family: 'Qwitcher Grypen', cursive;
+color: #fff;
+font-size: 80px;
+-webkit-transform: rotate(-25deg);
+  transform: rotate(-25deg);
+  margin-top: 350px;
+        animation: neon .1s ease-in-out infinite alternate;
+
+}
+
+ @keyframes neon {
+  from {
+    text-shadow:
+      0 0 9px rgba(202, 228, 225, 0.92),
+      0 0 30px rgba(202, 228, 225, 0.39),
+      0 0 25px rgba(22, 25, 181, 0.52),
+      0 0 27px rgba(22, 50, 109, 0.92),
+      0 0 33px rgba(77, 107, 242, 0.78),
+      0 0 50px rgba(101, 135, 231, 0.92);
+  }
+
+  to {
+    text-shadow:
+      0 0 4px rgba(202, 228, 225, 0.98),
+      0 0 30px rgba(202, 228, 225, 0.42),
+      0 0 25px rgba(22, 25, 181, 0.58),
+      0 0 29px rgba(38, 99, 231, 0.84),
+      0 0 35px rgba(69, 99,234, 0.88),
+      0 0 60px rgb(21, 47, 118);
+  }
 }
 
 #redesociales svg{
   color: #1E1D1A;
+  margin-top: 100px;
   width: 25px;
   height: 25px;
 }
@@ -145,7 +214,7 @@ text-align: center;
   justify-content: center;
   align-content: center;
   padding: 10px;
-  width: 30vw;
+  width: 40vw;
   font-family: 'Monoton', cursive;
   text-shadow: 
   0 0 5px #fff,
@@ -169,14 +238,15 @@ text-align: center;
 
 
 
-#bodyPerf{
-  background-image: url("https://www.dropbox.com/s/2ct0i6kc61vp0bh/wall.jpg?raw=1");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-color: #141414;
-  display: flex;
 
+
+#bodyPerf{
+background-image: url("https://www.dropbox.com/s/2ct0i6kc61vp0bh/wall.jpg?raw=1");
+  background-position: center;
+  background-repeat: repeat;
+  background-color: #141414;
+  color: white;
+display: flex;
 }
 
 #cartelera{
@@ -263,6 +333,19 @@ background-color:rgb(30, 29, 26) ;
 
 }
 
+#crearcoctel{
+  margin: 3% 5%;
+  padding: 3%;
+  border-radius: 2em;
+    border: 0.8em double #fff;
+    box-shadow:
+      0 0 5px #fff,
+      0 0 10px rgb(255, 123, 255),
+      0 0 30px rgb(178, 30, 242);
+  background-color: rgb(30, 29, 26);
+  color: rgb(255, 123, 255);
+}
+
 #cocteles {
   border-radius: 2em;
   border: 0.8em double #fff;
@@ -284,29 +367,34 @@ background-color:rgb(30, 29, 26) ;
 }
 
 #coctel{
-  border-radius: 2em;
-  width: 20vw;
-  max-height: 50vh;
+  border-radius: 2em; 
 }
 
 #coctel img{
   max-height: 50vh;
+ 
 }
 
-#coctel a {
-  width: 12vw;
+#card-body a{
+ 
   font-size: 20px;
   color: white;
   background-color: rgb(25, 24, 24);
   border-radius: 0.5em;
+ 
+  
+
+}
+#card-body{
+  display: flex;
+  flex-direction: column;
 }
 
-#coctel a:hover {
+#card-body a:hover {
   color: black;
   background-color: rgb(123, 196, 255);
 
   box-shadow: 
- 
     0 0 10px rgb(123, 196, 255),
     0 0 150px rgb(123, 196, 255),
     0 0 20px rgb(123, 196, 255),
@@ -323,7 +411,7 @@ background-color:rgb(30, 29, 26) ;
 #signin{
   margin: auto;
   width: 70vw;
-  height: 50vh;
+  height: 70vh;
   padding: 5vw 5vh;
   background-image: url("https://www.dropbox.com/s/2ct0i6kc61vp0bh/wall.jpg?raw=1");
     background-size: cover;
