--- a/cocteleria/views/crear.hbs
+++ b/cocteleria/views/crear.hbs
@@ -1,5 +1,6 @@
 {{> header usuario}}
 
+<body id="bodyprincipal">
 
 
 <div id="crearcoctel">
@@ -31,12 +32,12 @@
         </div>
 <div class="form-group">
     <label>Preparación del cóctel
-        <textarea name="procedimiento" cols="30" rows="4" class="form-control" autocomplete="off" style="width: 90vw;"></textarea>
+        <textarea name="procedimiento" cols="30" rows="4" class="form-control" autocomplete="off" ></textarea>
     </label>
 </div>
 <div class="form-group">
     <label>Descripción del cóctel
-        <textarea name="descripcion" autocomplete="off" cols="30" rows="4" class="form-control" style="width: 90vw;"></textarea>
+        <textarea name="descripcion" autocomplete="off" cols="30" rows="4" class="form-control"></textarea>
     </label>
 </div>
 <div class="form-floating mb-3">
@@ -55,3 +56,5 @@
         <button type="submit" class="btn btn-primary">Sube tu creación</button>
     </form>
 </div>
+
+</body>
