--- a/cocteleria/views/principal.hbs
+++ b/cocteleria/views/principal.hbs
@@ -13,13 +13,23 @@
 
 
 <div class="container text-center" id="cocteles" >
-    <div class="row" id="contenedor">
+    <div class="row aling-items-end justify-content-between" id="contenedor">
+        <div class="12">
+            {{#if palab}}
+            <h2 id="principalmensaje">Cócteles que contienen {{palab.alcohol}}</h2>
+            {{/if}}
+<form class="d-flex" role="search" action="/search" method="get">
+    <input class="form-control me-2" type="search" placeholder="Buscar por alcohol" aria-label="Search"
+        autocomplete="off" name="alcohol">
+    <button class="btn btn-outline-success" type="submit">Buscar</button>
+</form>
+        </div>
         {{#each coctel}}
-        <div class="col-3 m-2" style=" background-color: rgba(77, 76, 74, 0.5)" id="coctel">
+        <div class="col-3 m-5" style=" background-color: rgba(77, 76, 74, 0.5)" id="coctel" >
             <img src="{{imageUrl}}" class="card-img-top" alt="Imagen del cóctel">
-            <div class="card-body">
+            <div class="card-body" id="card-body">
                 <h4 class="card-title"> {{name}}</h4>
-                <a href="informacion/{{_id}}" class="btn ">Más información</a>
+                <a href="informacion/{{_id}}" class="btn">Más información</a>
             </div>
         </div>
 
@@ -28,15 +38,7 @@
 </div> 
 <div id="primeraSeccion">
 
-    {{#if palab}}
-    <h2 id="principalmensaje">Aqui puedes ver todos los cócteles que contengan {{palab.alcohol}}</h2>
-    {{else}}
-    <h2>Aqui puedes ver todos los cócteles</h2>
-    {{/if}}
+    
 </div>
-<form class="d-flex" role="search" action="/search" method="get">
-    <input class="form-control me-2" type="search" placeholder="Buscar por alcohol" aria-label="Search"
-        autocomplete="off" name="alcohol">
-    <button class="btn btn-outline-success" type="submit">Buscar</button>
-</form>
+
 </body>
