todo terminado listo para enviarlo a main

--- a/cocteleria/views/crear.hbs
+++ b/cocteleria/views/crear.hbs
@@ -31,21 +31,21 @@
             <label for="floatingPassword"> Ingredientes</label>
         </div>
 <div class="form-group">
-    <label>Preparación del cóctel
+    <label style="color: white;">Preparación del cóctel
         <textarea name="procedimiento" cols="30" rows="4" class="form-control" autocomplete="off" ></textarea>
     </label>
 </div>
 <div class="form-group">
-    <label>Descripción del cóctel
+    <label style="color: white;">Descripción del cóctel
         <textarea name="descripcion" autocomplete="off" cols="30" rows="4" class="form-control"></textarea>
     </label>
 </div>
 <div class="form-floating mb-3">
-    <input type="text" class="form-control" id="floatingInput" name="origen">
+    <input type="text" class="form-control" id="floatingInput" name="origen" style="margin-top: 15px">
     <label for="floatingInput" autocomplete="off">Origen</label>
 </div>
         <div class="form-group">
-            <label>Sube tu imagen:
+            <label style="color: white; margin-top: 15px">Sube tu imagen:
                 <input type="file" name="coctel-cover-image" class="form-control-file" />
             </label>
         </div>
@@ -53,7 +53,7 @@
        
        
 
-        <button type="submit" class="btn btn-primary">Sube tu creación</button>
+        <button type="submit" class="btn btn-primary" style="margin-top: 15px">Sube tu creación</button>
     </form>
 </div>
 
