--- a/cocteleria/views/editarPerfil.hbs
+++ b/cocteleria/views/editarPerfil.hbs
@@ -1,6 +1,6 @@
 {{> header usuario}}
 
-
+<body id="bodyprincipal"></body>
 <h1>editar perfil</h1>
 
 
@@ -28,3 +28,4 @@
     <input type="button" class="btn btn-light text-black h6 mt-3" value="Volver atrás" onclick="history.back()">
 </form>
 
+</body>
