--- a/cocteleria/public/stylesheets/style.css
+++ b/cocteleria/public/stylesheets/style.css
@@ -17,7 +17,10 @@ body {
       margin-right: 10%;
 }
 
-
+#fotoCoc{
+height: 50%;
+ 
+}
 
 #login{
       display: flex;
@@ -141,31 +144,31 @@ font-size: 80px;
  @keyframes neon {
   from {
     text-shadow:
-      0 0 9px rgba(202, 228, 225, 0.92),
+      0 0 9px rgba(35, 58, 186, 0.92),
       0 0 30px rgba(202, 228, 225, 0.39),
-      0 0 25px rgba(22, 25, 181, 0.52),
-      0 0 27px rgba(22, 50, 109, 0.92),
-      0 0 33px rgba(77, 107, 242, 0.78),
-      0 0 50px rgba(101, 135, 231, 0.92);
+      0 0 9px rgba(22, 25, 181),
+      0 0 20px rgba(22, 25, 181),
+      0 0 50px rgba(22, 50, 109, 0.92),
+      0 0 70px rgba(0, 29, 159, 0.78),
+      0 0 100px rgba(255, 255, 255);
   }
 
   to {
     text-shadow:
       0 0 4px rgba(202, 228, 225, 0.98),
       0 0 30px rgba(202, 228, 225, 0.42),
-      0 0 25px rgba(22, 25, 181, 0.58),
-      0 0 29px rgba(38, 99, 231, 0.84),
-      0 0 35px rgba(69, 99,234, 0.88),
-      0 0 60px rgb(21, 47, 118);
+      0 0 10px rgba(22, 25, 181),
+      0 0 35px rgba(22, 25, 181, 0.58),
+      0 0 40px rgba(38, 99, 231, 0.84),
+      0 0 80px rgba(69, 99,234, 0.88),
+      0 0 130px rgb(255, 255, 255);
   }
 }
 
 
 #redesociales svg{
   color: #1E1D1A;
-  margin-top: 100px;
-  width: 25px;
-  height: 25px;
+
 }
 
 /* ESTILOS DE LA BARRA DE NAVEGACIÓN  */
@@ -246,6 +249,7 @@ font-size: 80px;
 }
 
 #cartelera{
+  float: right;
   margin-left: 5%;
   margin-right: 5%;
   margin-top: 4%;
@@ -256,7 +260,7 @@ font-size: 80px;
     0 0 5px #fff,
     0 0 10px rgb(255, 123, 255),
     0 0 30px rgb(178, 30, 242);
-  height: 100%;
+  /* height: 100%; */
 
 }
 
@@ -275,14 +279,11 @@ font-size: 80px;
   color: rgba(238, 30, 242, 0.78);
 }
 
-#fotoCoc{
-height: 60%;
-}
 
 
-#infCub{
+/* #infCub{
   padding-bottom: 20px;
-}
+} */
 #titolCub{
   color:rgba(238, 30, 242, 0.78) ;
   margin-bottom: 10px;
@@ -399,7 +400,7 @@ background-color:rgb(30, 29, 26) ;
       0 0 10px rgb(255, 123, 255),
       0 0 30px rgb(178, 30, 242);
   background-color: rgb(30, 29, 26);
-  color: rgb(255, 123, 255);
+ color: black;
   
 }
 
