--- a/cocteleria/views/profile.hbs
+++ b/cocteleria/views/profile.hbs
@@ -5,7 +5,7 @@
 
 
     <div id="bodyPerf">
-        <div class="card" style="width: 25rem;" id="jCarta">
+        <div class="card" style="width: 25rem; " id="jCarta">
             <img src="{{user.fotoPerfil}}" class="card-img-top" alt="Foto d'usuari">
             <div class="card-body" id="cartaPerfil">
                 <div id="titulo-b">
@@ -17,14 +17,28 @@
             
                
         </div>
-        
+        <div  class="row" style="width: 100%; background-color: #1E1D1A; margin: 5%" id="cocteles">
             
-        
-    </div>
-    <div class="container text-center" id="cartelera">
-        <div class="row" id="cartComp">
+      
             {{#each coctelUser}}
-            <div class="col m-1" style="background-color: rgba(77, 76, 74, 0.5)" id="casellaCoc">
+        <div class="col-3 card " style="width: 18rem; background-color: rgba(77, 76, 74, 0.5); border-radius: 2em; margin: 1%; text-align: center; ">
+            <img src="{{imageUrl}}" class="card-img-top" alt="Imagen del cóctel" id="fotoCoc">
+            <div class="card-body" id="infCub">
+                <h5 class="card-title" style="color:white;">{{name}}</h5>
+                
+                <a href="/informacion/{{_id}}" class="btn btn-primary">Más información</a>
+            </div>
+        </div>
+                {{/each}}
+        <form>
+            <input type="button" class="btn btn-light text-black h6 mt-3" value="Volver atrás" onclick="history.back()">
+        </form>
+</div>
+    {{!-- </div>
+    <div class="container text-center" id="cocteles">
+        <div class="row" id="contenedor">
+            {{#each coctelUser}}
+            <div class="col-3 m-1" style="background-color: rgba(77, 76, 74, 0.5)" id="casellaCoc">
                 <img src="{{imageUrl}}" class="card-img-top" alt="Imagen del cóctel" id="fotoCoc">
                 <div class="card-body" id="infCub">
                     <h5 class="card-title" id="titolCub"> {{name}}</h5>
@@ -32,18 +46,15 @@
                     <a href="/informacion/{{_id}}" class="btn btn-primary">Más información</a>    
                 </div>
 
-                {{/each}}
+                {{/each}} --}}
                 
-                    <form>
-                        <input type="button" class="btn btn-light text-black h6 mt-3" value="Volver atrás" onclick="history.back()">
-                    </form>
+                    
                 
 
+          
             </div>
-            
 
-        </div>
-    </div>
+   
 
     
 
