proyecto definitivo, funciona todo bien y css todo bien

--- a/cocteleria/views/editCoctel.hbs
+++ b/cocteleria/views/editCoctel.hbs
@@ -1,4 +1,7 @@
-<div id="signin">
+<body id="bodyprincipal">
+
+
+<div id="crearcoctel" style="color: white;">
     <form action="/informacion/{{coctel._id}}/edit" method="POST">
         <div class="form mb-3">
             <label for="floatingInput">Nombre del cocktail</label>
@@ -48,3 +51,5 @@
         <input type="button" class="btn btn-light text-black h6 mt-3" value="Volver atrás" onclick="history.back()">
     </form>
 </div>
+
+</body>
